<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        app:contentPadding="25dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="6dp"
        app:cardMaxElevation="10dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                >
                <TextView
                    android:id="@+id/log_first"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/log_first"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <RadioGroup
                    android:id="@+id/first"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/first_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/log_first_a" />

                    <RadioButton
                        android:id="@+id/first_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/log_first_b" />

                    <RadioButton
                        android:id="@+id/first_c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/log_first_c" />
                </RadioGroup>

                <TextView
                    android:id="@+id/log_second"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/log_second"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <RadioGroup
                    android:id="@+id/second"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/second_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/log_second_a" />

                    <RadioButton
                        android:id="@+id/second_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/log_second_b" />

                    <RadioButton
                        android:id="@+id/second_c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/log_second_c" />
                </RadioGroup>

                <TextView
                    android:id="@+id/log_third"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/log_third"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <RadioGroup
                    android:id="@+id/third"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/third_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/log_third_a" />

                    <RadioButton
                        android:id="@+id/third_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/log_third_b" />

                </RadioGroup>


                <TextView
                    android:id="@+id/log_fourth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/log_fourth"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <RadioGroup
                    android:id="@+id/fourth"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/fourht_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/log_fourth_a" />

                    <RadioButton
                        android:id="@+id/fourth_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/log_fourth_b" />

                    <RadioButton
                        android:id="@+id/fourth_c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/log_fourth_c" />
                </RadioGroup>

                <TextView
                    android:id="@+id/log_fifth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/log_fifth"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <RadioGroup
                    android:id="@+id/fifth"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/fifth_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/log_fifth_a" />

                    <RadioButton
                        android:id="@+id/fifth_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/log_fifth_b" />

                    <RadioButton
                        android:id="@+id/fifth_c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/log_fifth_c" />
                </RadioGroup>

                <TextView
                    android:id="@+id/log_sixth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/log_sixth"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <RadioGroup
                    android:id="@+id/sixth"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/sixth_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/log_sixth_a" />

                    <RadioButton
                        android:id="@+id/sixth_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/log_sixth_b" />

                    <RadioButton
                        android:id="@+id/sixth_c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/log_sixth_c" />
                </RadioGroup>

                <TextView
                    android:id="@+id/log_seventh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/log_seventh"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <RadioGroup
                    android:id="@+id/seventh"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/seventh_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/log_seventh_a" />

                    <RadioButton
                        android:id="@+id/seventh_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/log_seventh_b" />

                    <RadioButton
                        android:id="@+id/seventh_c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/log_seventh_c" />
                </RadioGroup>

                <Button
                    android:id="@+id/sendLog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/log_send"
                    android:textColor="#FFFFFF" />

            </LinearLayout>
        </ScrollView>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>